Done the basic sub from task (#Moonshine-IDE/Moonshine-IDE#1015)

--- a/src/view/VisualEditor.mxml
+++ b/src/view/VisualEditor.mxml
@@ -161,6 +161,10 @@
 					this.editingSurface.visualEditorFileName=loadFile.name.split(".")[0];
 				}
 
+				if(filePath.indexOf("subforms")>0){
+					this.editingSurface.visualEditorFileType="subform";
+				}
+
 				
 			}
 
