Done the Action formula edtior loading formula(#1014)

--- a/src/view/domino/action/DominoActionOrganizer.mxml
+++ b/src/view/domino/action/DominoActionOrganizer.mxml
@@ -167,7 +167,7 @@
 
 
         private function actionHandler(event:MouseEvent):void{
-            Alert.show("My Var: " + event.currentTarget.selectedItem.value);
+            MoonshineBridgeUtils.moonshineBridge.openDominoActionFile(event.currentTarget.selectedItem.description);
         }
 
 
