Create new form or new project the default windowTitle will as form name (References: Moonshine-IDE/Moonshine-IDE#1189)

--- a/src/view/VisualEditor.mxml
+++ b/src/view/VisualEditor.mxml
@@ -212,6 +212,7 @@
 
 				if (!tempFileMoonshine.exists)
 				{
+					this.editingSurface.visualEditorFileName=tempFileMoonshine.name.split(".")[0];
 					var xml:XML = this.editingSurface.toXML();
 					var tempFileStreamMoonshine:FileStream = new FileStream();
 					tempFileStreamMoonshine.open(tempFileMoonshine, FileMode.WRITE);
