Add share field limit for one field limit (References: Moonshine-IDE/Moonshine-IDE#1014)

--- a/src/view/ComponentList.mxml
+++ b/src/view/ComponentList.mxml
@@ -183,6 +183,15 @@
 				collection.refresh()
 			}
 
+			public function shareFieldList():void
+			{
+				collection = new ArrayCollection([
+							new ComponentListItem("Input", DominoInputText)
+							
+						]);
+				collection.refresh()
+			}
+
 			private function filterSearch():void
 			{
 				// probable termination
