fix the page windowsTitle issue (Moonshine-IDE/Moonshine-IDE#1189)

--- a/src/view/domino/action/DominoActionOrganizer.mxml
+++ b/src/view/domino/action/DominoActionOrganizer.mxml
@@ -84,7 +84,7 @@
 
    <s:Label text="Share Field on Form" left="0" right="0"/> 
 
-   <s:List  allowMultipleSelection="true" dragEnabled="true"
+   <s:List  allowMultipleSelection="false" dragEnabled="true"
     dragMoveEnabled="true"
     dropEnabled="true"
     useVirtualLayout="true"
