--- a/src/view/EditingSurface.mxml
+++ b/src/view/EditingSurface.mxml
@@ -118,6 +118,7 @@
         private var _visualEditorFileType:String;
         private var _visualEditorFileName:String;
         private var _subFormList:ArrayList = new ArrayList();
+        private var _sharedFieldList:ArrayList = new ArrayList();
         private var _dominoActionsList:ArrayList = new ArrayList();
         private var _isDominoProject:Boolean = false;
         private var _isRoyaleProject:Boolean = false;
@@ -145,6 +146,20 @@
             
             return _subFormList;
         }
+
+        //_sharedFieldList
+
+        public function set sharedFieldList(sharedFields:ArrayList):void{
+           
+            _sharedFieldList=sharedFields;
+        }
+        [Bindable("change")]
+        public function get sharedFieldList():ArrayList{
+            
+            return _sharedFieldList;
+        }
+
+
         public function set visualEditorType(value:String):void
         {
             _visualEditorType = value;
