--- a/src/view/ComponentList.mxml
+++ b/src/view/ComponentList.mxml
@@ -110,7 +110,7 @@
 						new ComponentListItem("Input", DominoInputText),
 						new ComponentListItem("Label", DominoLabel),
 						new ComponentListItem("Table", DominoTable),
-						new ComponentListItem("Div", Div),
+						//new ComponentListItem("Div", Div),
 						new ComponentListItem("ComputedText", DominoComputedText),
 						new ComponentListItem("Paragraph", DominoParagraph, {maxWidth: 120}),
 						new ComponentListItem("Section", DominoSection),
@@ -175,7 +175,7 @@
 						new ComponentListItem("Button", DominoButton),
 						new ComponentListItem("Label", DominoLabel),
 						new ComponentListItem("Table", DominoTable),
-						new ComponentListItem("Div", Div),
+						//new ComponentListItem("Div", Div),
 						new ComponentListItem("ComputedText", DominoComputedText),
 						new ComponentListItem("Paragraph", DominoParagraph,{maxWidth: 120}),
 						new ComponentListItem("Section", DominoSection),
