Fix the Div&Sharefile element and more copy&past issue(Moonshine-IDE/Moonshine-IDE#1032)

--- a/src/view/ComponentList.mxml
+++ b/src/view/ComponentList.mxml
@@ -115,10 +115,10 @@
 						new ComponentListItem("Paragraph", DominoParagraph, {maxWidth: 120}),
 						new ComponentListItem("Section", DominoSection),
 						new ComponentListItem("TabView", DominoTabView),
-						new ComponentListItem("Calendar", DominoCalendar),
+						//new ComponentListItem("Calendar", DominoCalendar),
 						new ComponentListItem("SubForm", DominoSubForm),
 						new ComponentListItem("ShareAction", DominoShareAction),
-						new ComponentListItem("ShareField", DominoShareField)
+						//new ComponentListItem("ShareField", DominoShareField)
 							
 						]);
 					
