Fix the  copy&past subform(Moonshine-IDE/Moonshine-IDE#1032)

--- a/src/view/ComponentList.mxml
+++ b/src/view/ComponentList.mxml
@@ -117,7 +117,7 @@
 						new ComponentListItem("TabView", DominoTabView),
 						//new ComponentListItem("Calendar", DominoCalendar),
 						new ComponentListItem("SubForm", DominoSubForm),
-						new ComponentListItem("ShareAction", DominoShareAction),
+						//new ComponentListItem("ShareAction", DominoShareAction),
 						//new ComponentListItem("ShareField", DominoShareField)
 							
 						]);
