clean no need component

--- a/src/view/ComponentList.mxml
+++ b/src/view/ComponentList.mxml
@@ -118,7 +118,7 @@
 						//new ComponentListItem("Calendar", DominoCalendar),
 						new ComponentListItem("SubForm", DominoSubForm),
 						//new ComponentListItem("ShareAction", DominoShareAction),
-						new ComponentListItem("ShareField", DominoShareField)
+						//new ComponentListItem("ShareField", DominoShareField)
 							
 						]);
 					
